fixed centering on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,6 +23,11 @@
   flex-wrap: wrap;
 }
 
+.tab-content {
+  display: flex;
+  justify-content: center;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
